--- a/index.html
+++ b/index.html
@@ -4,55 +4,105 @@
 	<meta charset="UTF-8">
 	<title>Matador de Monstros</title>
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,600" rel="stylesheet">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 	<link rel="stylesheet" href="style.css">
 	<script type="text/javascript" src="https://unpkg.com/vue"></script>
 </head>
 <body>
 	<div id="app">
-		<div v-if="running || logs.length > 0" class="panel scores">
-			<div class="score">
-				<h1>{{ player.name }}</h1>
-				<div class="life-bar">
-					<div class="life" :class="{danger: player.life < 20}" :style="{width: player.life + '%'}"></div>
+
+		<div class="section no-pad-bot" v-if="!running">
+			<div class="container">
+				<br><br>
+				<div class="row center">
+					<img src="./logo/mdm.png" alt="Matador de Monstros" width="300px" class="responsive-img">
 				</div>
-				<div>{{ player.life }}%</div>
+				<div class="row center" style="max-width: 250px">
+					<div class="row center">
+						<div class="input-field">
+							<input id="player_name" placeholder="Nome do Personagem" type="text" required  v-model="player.name">
+						</div>
+					</div>
+				</div>
+				<div class="row center">
+					<a class="waves-effect btn blue-grey darken-3" @click="startGame" :disabled="!player.name">Iniciar Jogo</a>
+				</div>
+			</div>
+		</div>
+
+		<div class="section">
+
+			<div class="container" v-if="running">
+				<div class="row">
+					<div class="col s6">
+						<div class="card">
+							<div class="score p">
+								<h1>{{ player.name }}</h1>
+								<div class="life-bar">
+									<div class="life" :class="{danger: player.life < 20}" :style="{width: player.life + '%'}"></div>
+								</div>
+								<div>{{ player.life }}%</div>
+							</div>
+						</div>
+					</div>
+					<div class="col s6">
+						<div class="card">
+							<div class="score">
+								<h1>Monstro</h1>
+								<div class="life-bar">
+									<div class="life" :class="{danger: monster.life < 20}" :style="{width: monster.life + '%'}"></div>
+								</div>
+								<div>{{ monster.life }}%</div>
+							</div>
+						</div>
+					</div>
+				</div>
 			</div>
 
-			<div class="score">
-				<h1>Monstro</h1>
-				<div class="life-bar">
-					<div class="life" :class="{danger: monster.life < 20}" :style="{width: monster.life + '%'}"></div>
+			<div class="container" v-if="running">
+				<div class="row">
+					<div class="col s12">
+						<div class="card">
+							<div class="card-content buttons">
+								<button @click="attack(false)" class="btn attack">Ataque</button>
+								<button @click="attack(true)" class="btn special-attack" :class="{canUseSpecial: !canUseSpecial}" :disabled="!canUseSpecial">Ataque especial ({{ player.special.available-player.special.used }})</button>
+								<button @click="healAndHurt" class="btn heal" :class="{canUseHeal: !canUseHeal}" :disabled="!canUseHeal">Curar ({{ player.heal.available-player.heal.used }})</button>
+								<button @click="running = false" class="btn give-up">Desistir</button>
+							</div>
+						</div>
+					</div>
 				</div>
-				<div>{{ monster.life }}%</div>
 			</div>
+
+			<div class="container" v-if="logs.length && running">
+				<div class="row">
+					<div class="col s12">
+						<div class="card">
+							<div class="card-content logs">
+								<ul>
+									<li class="log" :class="log.cls" v-for="log in logs">
+										{{ log.text }}
+									</li>
+								</ul>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+
+			<div class="container" v-if="hasResult">
+				<div class="row">
+					<div class="col s12">
+						<div class="result">
+							<div v-if="monster.life == 0" class="win">Você ganhou!</div>
+							<div v-else class="lose">Você perdeu!</div>
+						</div>
+					</div>
+				</div>
+			</div>
+
 		</div>
-		
-		<div v-if="hasResult" class="panel result">
-			<div v-if="monster.life == 0" class="win">Você ganhou!</div>
-			<div v-else class="lose">Você perdeu!</div>
-			
-		</div>
-		
-		<div class="panel buttons">
-			<template v-if="running">
-				<button @click="attack(false)" class="btn attack">Ataque</button>
-				<button @click="attack(true)" class="btn special-attack" :class="{canUseSpecial: !canUseSpecial}" :disabled="!canUseSpecial">Ataque especial ({{ player.special.available-player.special.used }})</button>
-				<button @click="healAndHurt" class="btn heal" :class="{canUseHeal: !canUseHeal}" :disabled="!canUseHeal">Curar ({{ player.heal.available-player.heal.used }})</button>
-				<button @click="running = false" class="btn give-up">Desistir</button>
-			</template>
-			<template v-else>
-				<input type="text" v-model="player.name" placeholder="Digite o nome do seu personagem" size="30">
-				<button @click="startGame" class="btn new-game">Iniciar jogo</button>
-			</template>
-		</div>
-		
-		<div v-if="logs.length" class="panel logs">
-			<ul>
-				<li class="log" :class="log.cls" v-for="log in logs">
-					{{ log.text }}
-				</li>
-			</ul>
-		</div>	
+
 	</div>
 
 	<script type="text/javascript" src="app.js"></script>
