--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
 					<div class="col s6">
 						<div class="card">
 							<div class="score p">
+								<p><img src="./characters/hero.gif" alt=""></p>
 								<h1>{{ player.name }}</h1>
 								<div class="life-bar">
 									<div class="life" :class="{danger: player.life < 20}" :style="{width: player.life + '%'}"></div>
@@ -64,6 +65,7 @@
 					<div class="col s6">
 						<div class="card">
 							<div class="score">
+								<p><img src="./characters/monster.gif" alt=""></p>
 								<h1>Monstro <span>nível {{ difficulty }}</span></h1>
 								<div class="life-bar">
 									<div class="life" :class="{danger: monster.life < 20}" :style="{width: monster.life + '%'}"></div>
