--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 						<div class="card">
 							<div class="score">
 								<p><img :src="'./characters/' + monster.type[(difficulty-1)] + '.gif'" alt="" class="monster-img"></p>
-								<h1>Monstro <span>nível {{ difficulty }}</span></h1>
+								<h1>{{ monster.type[(difficulty-1)] }} <span>nível {{ difficulty }}</span></h1>
 								<div class="life-bar">
 									<div class="life" :class="{danger: monster.life < 20}" :style="{width: monster.life + '%'}"></div>
 								</div>
