--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body>
 	<div id="app">
 
-		<div class="section no-pad-bot" v-if="!running">
-			<div class="container">
+		<div class="section no-pad-bot">
+			<div class="container" v-if="!running">
 				<br><br>
 				<div class="row center">
 					<img src="./logo/mdm.png" alt="Matador de Monstros" width="300px" class="responsive-img">
@@ -44,16 +44,13 @@
 					<a class="waves-effect btn blue-grey darken-3" @click="startGame" :disabled="!player.name">Iniciar Jogo</a>
 				</div>
 			</div>
-		</div>
-
-		<div class="section">
 
 			<div class="container" v-if="running">
 				<div class="row">
 					<div class="col s6">
 						<div class="card">
 							<div class="score p">
-								<p><img src="./characters/hero.gif" alt=""></p>
+								<p><img :src="'./characters/' + player.image + '.gif'" alt=""></p>
 								<h1>{{ player.name }}</h1>
 								<div class="life-bar">
 									<div class="life" :class="{danger: player.life < 20}" :style="{width: player.life + '%'}"></div>
