Importação do CDN do vue2

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 	<link rel="stylesheet" href="style.css">
 	<script type="text/javascript" src="https://unpkg.com/vue"></script>
+	<script src="https://cdn.jsdelivr.net/npm/vue@2"></script>
 </head>
 <body onload="playBg()">
 	<div id="app">
-
 		<div class="section no-pad-bot">
 			<div class="container" v-if="!running">
 				<br><br>
