--- a/index.html
+++ b/index.html
@@ -11,8 +11,12 @@
 	<script src="https://cdn.jsdelivr.net/npm/vue@2"></script>
 </head>
 <body onload="playBg()">
-	<div id="app">
-		<div class="section no-pad-bot">
+	<div id="app" :class="(mode==='dark')? 'dark' :'light' ">
+		<div class="section no-pad-bot" :class="(mode==='dark')? 'dark' :'light' ">	
+			<div class="row">
+				<span class="col s2 offset-s10" v-if="mode=='dark'" @click="mode='light'">Modo Claro</span>
+				<span class="col s2 offset-s10" v-if="mode=='light'" @click="mode='dark'">Modo Escuro</span>
+			</div>		
 			<div class="container" v-if="!running">
 				<br><br>
 				<div class="row center">
@@ -106,7 +110,7 @@
 								<div class="life-bar">
 									<div class="life" :class="{danger: player.life < 20}" :style="{width: player.life + '%'}"></div>
 								</div>
-								<div>{{ player.life }}%</div>
+								<div class="life-percent">{{ player.life }}%</div>
 							</div>
 						</div>
 					</div>
